# -MCD-TDA-2026-1-Algorithmic_Trading

./: .gitignore  Makefile  README.md  pyproject.toml
data/metadata/binance_20220512_20260511/: download_metadata.json
freqtrade/: docker-compose.yml
freqtrade/user_data/strategies/: EMAcrossover_15m.py  RFStrategy.py  RSI.py
freqtrade/user_data/strategies/docs/: EMAcrossover_15m.md  RFStrategy.md
freqtrade/user_data/strategies/models/: rf_BTC_USDT_15m_20260516_1139.pkl  rf_BTC_USDT_5m_20260516_1220.pkl  rf_ETH_USDT_15m_20260516_1001.pkl  rf_ETH_USDT_15m_20260516_1242.pkl  rf_ETH_USDT_5m_20260516_1115.pkl
notebooks/: RandomForest.ipynb  TDA_Crypto_Pipeline.py  comandosbash.txt
notebooks/experiments/: tda_pipeline.ipynb
scripts/: fetch_freqtrade_data.py  fetch_freqtrade_data.sh  run_backtest.py  run_hyperopt.py  setup_ipykernel.sh  setup_talib.sh
src/trading_tda/: __init__.py  config.py  data.py  h5_utils.py  loaders.py  storage.py  ta.py  tda.py  windowing.py
src/trading_tda/pipelines/: betti_curves_pipelines.py  embeddings_pipelines.py  persistence_entropy_pipelines.py  persistence_pipelines.py  persistence_statistics_pipelines.py  persistence_vectors_pipelines.py  tda_data_pipelines.py  windows_pipelines.py
tests/: test_random.py
