[project]
name = "trading-tda"
version = "0.1.0"
description = "Trading de criptomonedas usando Homología Persistente."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pmdarima>=2.1.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
    "ta-lib>=0.6.8",
    "vectorbt>=0.28.2",
]

[project.scripts]
trading-tda = "trading_tda:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
